--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,230 +1,124 @@
 /*Colours*/
-$lavender: #e3d8f1;
-$grey: #393d3f;
-$mint: #9cc4b2;
-$beige: #d3bbb9;
-/*Font*/
-@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap");
+$lavender: #E3D8F1;
+$grey: #393D3F;
+$mint: #9CC4B2;
+$beige: #D3BBB9;
 
-@media (min-width: 320px) and (max-width: 670px) {
-  html {
+html {
     width: 100vw;
-    body {
-      width: 100%;
-      height: 100%;
-      margin: 0 auto;
-      font-family: "Work Sans", sans-serif;
-      font-size: 13px;
-      color: $grey;
-      display: flex;
+    height: 100vh;
 
-      main {
+    body {
         width: 100%;
-        height: auto;
+        height: 100vh;
         margin: 0 auto;
-        display: flex;
-        flex-flow: column nowrap;
+        font-family: 'Work Sans', sans-serif;
+        font-size: 12px !important;
+        color: $grey;
 
-        #left {
-          header {
-            padding: 15px 15px 0 15px;
+        #mobile {
+            display: none;
+        }
 
-            h1 {
-              font-size: 2rem;
-              font-weight: 700;
-              text-transform: uppercase;
-              margin: 10px 10px 10px 25px;
-            }
-
-            p {
-              margin-left: 25px;
-            }
-          }
-
-          .soundboard {
+        main {
             width: 100%;
-            height: auto;
-            margin: 0 auto;
-            padding: 30px 0;
             display: flex;
-            flex-flow: row wrap;
-            justify-content: center;
-            align-content: center;
+            flex-flow: row nowrap;
 
-            .key {
-              width: 130px;
-              height: 90px;
-              margin: 15px 10px;
-              box-shadow: 2px 4px 25px rgba(0, 0, 0, 0.1);
-              border-radius: 10px;
-              transition: all 1s;
-              text-align: center;
+            #left {
+                width: 40%;
+                height: 100%;
 
-              h2 {
-                background-color: $lavender;
-                border-top-left-radius: 10px;
-                border-top-right-radius: 10px;
-                color: #ffffff;
-                text-transform: uppercase;
-                font-weight: 700;
-                margin-bottom: 0px;
-              }
+                header {
+                    padding: 15px 15px 0 15px;
 
-              p {
-                margin: 15px 0 0 0;
-                padding: 0 5px;
-                font-weight: 500;
-              }
-            }
+                    h1 {
+                        font-size: 3.5em;
+                        font-weight: 700;
+                        text-transform: uppercase;
+                        margin: 10px 10px 10px 25px;
+                    }
 
-            .playing {
-              transform: scale(1.1);
-
-              h2 {
-                background-color: $mint;
-              }
-            }
-          }
-
-          footer {
-            width: 40%;
-            margin: 0 auto;
-
-            p {
-              text-align: center;
-              color: $grey;
-
-              a {
-                color: $mint;
-
-                &:hover {
-                  color: $beige;
-                  text-decoration: none;
+                    p {
+                        margin-left: 25px;
+                    }
                 }
-              }
-            }
-          }
-        }
-        #right {
-          display: none;
-        }
-      }
-    }
-  }
-}
 
-@media (min-width: 671px) {
-  html {
-    width: 100vw;
-    body {
-      width: 100%;
-      height: 100vh;
-      margin: 0 auto;
-      font-family: "Work Sans", sans-serif;
-      font-size: 13px !important;
-      color: $grey;
+                .soundboard {
+                    width: 100%;
+                    height: auto;
+                    margin: 0 auto;
+                    padding: 30px 0;
+                    display: flex;
+                    flex-flow: row wrap;
+                    justify-content: center;
+                    align-content: center;
 
-      main {
-        width: 100%;
-        display: flex;
-        flex-flow: row nowrap;
+                    .key {
+                        width: 130px;
+                        height: 90px;
+                        margin: 15px 10px;
+                        box-shadow: 2px 4px 25px rgba(0, 0, 0, 0.1);
+                        border-radius: 10px;
+                        transition: all 1s;
+                        text-align: center;
 
-        #left {
-          width: 40%;
-          height: 100%;
+                        h2 {
+                            background-color: $lavender;
+                            border-top-left-radius: 10px;
+                            border-top-right-radius: 10px;
+                            color: #ffffff;
+                            text-transform: uppercase;
+                            font-weight: 700;
+                            margin-bottom: 0px;
+                        }
 
-          header {
-            padding: 15px 15px 0 15px;
+                        p {
+                            margin: 15px 0 0 0;
+                            padding: 0 5px;
+                        }
+                    }
 
-            h1 {
-              font-size: 2rem;
-              font-weight: 700;
-              text-transform: uppercase;
-              margin: 10px 10px 10px 25px;
-            }
+                    .playing {
+                        transform: scale(1.1);
 
-            p {
-              margin-left: 25px;
-            }
-          }
+                        h2 {
+                            background-color: $mint;
+                        }
+                    }
 
-          .soundboard {
-            width: 100%;
-            height: auto;
-            margin: 0 auto;
-            padding: 30px 0;
-            display: flex;
-            flex-flow: row wrap;
-            justify-content: center;
-            align-content: center;
-
-            .key {
-              width: 130px;
-              height: 90px;
-              margin: 15px 10px;
-              box-shadow: 2px 4px 25px rgba(0, 0, 0, 0.1);
-              border-radius: 10px;
-              transition: all 1s;
-              text-align: center;
-
-              h2 {
-                background-color: $lavender;
-                border-top-left-radius: 10px;
-                border-top-right-radius: 10px;
-                color: #ffffff;
-                text-transform: uppercase;
-                font-weight: 700;
-                margin-bottom: 0px;
-              }
-
-              p {
-                margin: 15px 0 0 0;
-                padding: 0 5px;
-                font-weight: 500;
-              }
-            }
-
-            .playing {
-              transform: scale(1.1);
-
-              h2 {
-                background-color: $mint;
-              }
-            }
-          }
-
-          footer {
-            width: 40%;
-            margin: 0 auto;
-
-            p {
-              text-align: center;
-              color: $grey;
-
-              a {
-                color: $mint;
-
-                &:hover {
-                  color: $beige;
-                  text-decoration: none;
                 }
-              }
-            }
-          }
-        }
 
-        #right {
-          display: block;
-          width: 60%;
-          height: 100vh;
-          position: fixed;
-          bottom: 0;
-          right: 0;
-          background-image: url(../img/gc_background.png);
-          background-repeat: no-repeat;
-          background-size: cover;
+                footer {
+                    width: 40%;
+                    margin: 0 auto;
+
+                    p {
+                        text-align: center;
+                        color: $grey;
+
+                        a {
+                            color: $mint;
+
+                            &:hover {
+                                color: $beige;
+                                text-decoration: none;
+                            }
+                        }
+                    }
+                }
+            }
+
+            #right {
+                width: 60%;
+                height: 100vh;
+                position: fixed;
+                bottom: 0;
+                right: 0;
+                background-image: url(../img/gc_background.png);
+                background-repeat: no-repeat;
+                background-size: cover;
+            }
         }
-      }
     }
-  }
 }
