--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,124 +1,124 @@
 /*Colours*/
-$lavender: #E3D8F1;
-$grey: #393D3F;
-$mint: #9CC4B2;
-$beige: #D3BBB9;
+$lavender: #e3d8f1;
+$grey: #393d3f;
+$mint: #9cc4b2;
+$beige: #d3bbb9;
 
 html {
-    width: 100vw;
+  width: 100vw;
+  height: 100vh;
+
+  body {
+    width: 100%;
     height: 100vh;
+    margin: 0 auto;
+    font-family: "Work Sans", sans-serif;
+    font-size: 12px !important;
+    color: $grey;
 
-    body {
-        width: 100%;
-        height: 100vh;
-        margin: 0 auto;
-        font-family: 'Work Sans', sans-serif;
-        font-size: 12px !important;
-        color: $grey;
-
-        #mobile {
-            display: none;
-        }
-
-        main {
-            width: 100%;
-            display: flex;
-            flex-flow: row nowrap;
-
-            #left {
-                width: 40%;
-                height: 100%;
-
-                header {
-                    padding: 15px 15px 0 15px;
-
-                    h1 {
-                        font-size: 3.5em;
-                        font-weight: 700;
-                        text-transform: uppercase;
-                        margin: 10px 10px 10px 25px;
-                    }
-
-                    p {
-                        margin-left: 25px;
-                    }
-                }
-
-                .soundboard {
-                    width: 100%;
-                    height: auto;
-                    margin: 0 auto;
-                    padding: 30px 0;
-                    display: flex;
-                    flex-flow: row wrap;
-                    justify-content: center;
-                    align-content: center;
-
-                    .key {
-                        width: 130px;
-                        height: 90px;
-                        margin: 15px 10px;
-                        box-shadow: 2px 4px 25px rgba(0, 0, 0, 0.1);
-                        border-radius: 10px;
-                        transition: all 1s;
-                        text-align: center;
-
-                        h2 {
-                            background-color: $lavender;
-                            border-top-left-radius: 10px;
-                            border-top-right-radius: 10px;
-                            color: #ffffff;
-                            text-transform: uppercase;
-                            font-weight: 700;
-                            margin-bottom: 0px;
-                        }
-
-                        p {
-                            margin: 15px 0 0 0;
-                            padding: 0 5px;
-                        }
-                    }
-
-                    .playing {
-                        transform: scale(1.1);
-
-                        h2 {
-                            background-color: $mint;
-                        }
-                    }
-
-                }
-
-                footer {
-                    width: 40%;
-                    margin: 0 auto;
-
-                    p {
-                        text-align: center;
-                        color: $grey;
-
-                        a {
-                            color: $mint;
-
-                            &:hover {
-                                color: $beige;
-                                text-decoration: none;
-                            }
-                        }
-                    }
-                }
-            }
-
-            #right {
-                width: 60%;
-                height: 100vh;
-                position: fixed;
-                bottom: 0;
-                right: 0;
-                background-image: url(../img/gc_background.png);
-                background-repeat: no-repeat;
-                background-size: cover;
-            }
-        }
+    #mobile {
+      display: none;
     }
+
+    main {
+      width: 100%;
+      display: flex;
+      flex-flow: row nowrap;
+
+      #left {
+        width: 40%;
+        height: 100%;
+
+        header {
+          padding: 15px 15px 0 15px;
+
+          h1 {
+            font-size: 3.5em;
+            font-weight: 700;
+            text-transform: uppercase;
+            margin: 10px 10px 10px 25px;
+          }
+
+          p {
+            margin-left: 25px;
+          }
+        }
+
+        .soundboard {
+          width: 100%;
+          height: auto;
+          margin: 0 auto;
+          padding: 30px 0;
+          display: flex;
+          flex-flow: row wrap;
+          justify-content: center;
+          align-content: center;
+
+          .key {
+            width: 130px;
+            height: 90px;
+            margin: 15px 10px;
+            box-shadow: 2px 4px 25px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            transition: all 1s;
+            text-align: center;
+            cursor: pointer;
+
+            h2 {
+              background-color: $lavender;
+              border-top-left-radius: 10px;
+              border-top-right-radius: 10px;
+              color: #ffffff;
+              text-transform: uppercase;
+              font-weight: 700;
+              margin-bottom: 0px;
+            }
+
+            p {
+              margin: 15px 0 0 0;
+              padding: 0 5px;
+            }
+          }
+
+          .playing {
+            transform: scale(1.1);
+
+            h2 {
+              background-color: $mint;
+            }
+          }
+        }
+
+        footer {
+          width: 40%;
+          margin: 0 auto;
+
+          p {
+            text-align: center;
+            color: $grey;
+
+            a {
+              color: $mint;
+
+              &:hover {
+                color: $beige;
+                text-decoration: none;
+              }
+            }
+          }
+        }
+      }
+
+      #right {
+        width: 60%;
+        height: 100vh;
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        background-image: url(../img/gc_background.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+    }
+  }
 }
