Small style changes

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,5 @@
 /*Colours*/
-$lavender: #e3d8f1;
+$lavender: #e3d4f7;
 $grey: #393d3f;
 $mint: #9cc4b2;
 $beige: #d3bbb9;
@@ -46,7 +46,7 @@ html {
           }
 
           .name {
-            color: #d4b3ff;
+            color: #c699ff;
           }
         }
 
@@ -123,7 +123,7 @@ html {
             color: $mint;
 
             &:hover {
-              color: $beige;
+              color: #c699ff;
               text-decoration: none;
             }
           }
